# SII-vibe-designer

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  api.toml.example  pyproject.toml
.ralph/: monitor-e2e.md  monitor-e2e.state.json
docs/: achievements.txt  architecture.md  defense-qa.md  release-notes.md  technical-report.md
docs/demo-runs/run-20260516-004106-chuangzhi/: brand-spec.md  brief.md  final.md  plan.md
docs/demo-runs/run-coffee-partial/: brand-spec.md  brief.md  plan.md
docs/demo-runs/run-final-hardened/: brand-spec.md  brief.md  final.md  (+1 more)
docs/presentation/: 01-architecture.html  01-title.html  02-architecture.html  02-sequence.html  03-dataflow.html  03-demo.html  04-decisions.html  05-demo.html  README.md  architecture-diagram-1.png.prompt.txt  architecture-diagram-2.png.prompt.txt  architecture-diagram-3.png.prompt.txt  architecture-diagram.html  index.html  slides.html
scripts/: check.sh  run_e2e.py  test_api.py  test_llm_capabilities.py  test_opencode_skill_permissions.py  test_sii_image_gen.py  test_sii_imagegen.py  test_sii_vision.py
vibe-design/: .gitignore  MILESTONES.md  README.md  opencode.json
vibe-design/docs/: skill-gap-analysis.md
vibe-design/examples/: brief-coffee-startup.md  brief-sii-academy.md  brief-sii-admission.md  brief-zhujiajiao.md
vibe-design/tools/: api_config.py  check_html_fonts.py  check_palette_compliance.py  extract_artifact_palette.py  gen_image.py  html_screenshot.py  validate.py  validate_brand_spec.py  validate_deliverables.py  validate_facts.py  verify_demo_panel.py  verify_facts.py
(+237 files in other folders)
