[project]
name = "sii-assignment"
version = "0.1.0"
description = "Vibe Design - multi-agent design system based on opencode harness"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.2.0",
    "playwright>=1.59",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
e2e-test = "scripts.run_e2e:main"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv]
package = true
# tools/gen_image.py uses only stdlib (urllib + base64), no deps needed.
# playwright is for tools/html_screenshot.py.
